test/failed-1/secret/variants/ill-typed/unexpected-variable-label-1.stella
// ERROR_UNEXPECTED_VARIANT_LABEL

language core;
extend with #variants;

fn main(a : Nat) -> <| foo : Nat |> {
    return <| bar = 0 |>
}
